tests/syntax_error/dotdotdot_dotdotdot.jou
declare foo(..., ...) -> None  # Error: if '...' is used, it must be the last parameter
